# raylib-on-gleam

./: .gitignore  CMakeLists.txt
src/: ray-erl.c
test/ray_gleam/: README.md  gleam.toml  manifest.toml
test/ray_gleam/src/: ray_erl.erl  ray_gleam.gleam
